# computational-intelligence

./: README.md  pyproject.toml
computational_intelligence/algorithms/: genetic_algorithm.py  socjo_SSGA.py
computational_intelligence/charts/: compare_basic_properties.py  diversity_chart.py  pdf_charts.py
computational_intelligence/playground/: age_classes.py  age_playground  age_playground.py  dupa.py  gde3.py  genetic_algorithm.py  pso.py  socjo_SSGA.py
